# flutter_lua_bridge

./: .gitignore  .metadata  LICENSE  PROJECT_OVERVIEW.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml  simple_example.dart
agents/: README.md
agents/docs/: game_demo_status.md  project_status.md
agents/scripts/: analyze_project.sh  mcp_client.dart
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
docs/: DEVELOPMENT.md  api_support.md  lua_apis.json  lua_apis.lua  lua_apis.md
example/: .gitignore  README.md  pubspec.yaml
example/assets/game/: formulas.lua
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/game/: battle_arena_page.dart  battle_simulator.dart  card_editor_page.dart  card_loader.dart  game_demo_page.dart  models.dart
example/lib/l10n/: app_localizations_en.dart
example/test/: widget_test.dart
example/web/: index.html
example_lua_url/: pubspec.yaml
example_lua_url/web/: manifest.json
examples/example/: pubspec.yaml
examples/example_lua_url/: README.md  pubspec.yaml
flutter_lua_bridge/: .metadata  Makefile  README.md  ffigen.yaml  pubspec.yaml
flutter_lua_bridge/example/: README.md  pubspec.yaml
flutter_lua_bridge/hook/: build.dart
flutter_lua_bridge/lib/: flutter_lua_bridge.dart
flutter_lua_bridge/scripts/: generate_dart_interfaces.lua
flutter_lua_bridge/src/: flutter_lua_bridge.c  flutter_lua_bridge.h
flutter_lua_bridge/test/: flutter_lua_bridge_test.dart
flutter_lua_bridge/tool/: ffigen.dart
flutter_lua_shim/hook/: build.dart
flutter_lua_shim/lib/: flutter_lua_shim.dart
flutter_lua_shim/src/: lua_api_shim.c  lua_api_shim.h  lua_api_types.h
flutter_lua_shim/test/: lua_state_api_test.dart  smoke_test.dart
flutter_lua_shim/tool/: api_set_5.3.dart  api_set_5.4.dart  api_set_5.5.dart  ffigen.dart
hook/: build.dart
ios/: flutter_lua_bridge.podspec
ios/Classes/: flutter_lua_bridge.c
legacy/flutter_lua_bridge/: analysis_options.yaml
legacy/flutter_lua_shim/: pubspec.yaml
lib/: flutter_lua_bridge.dart  flutter_lua_bridge_bindings_generated.dart  lua_dart_api.dart  lua_raw_api.dart  lua_simple_api.dart
lib/src/: flutter_lua_bridge.dart  macro_defines.dart
lua_api/: pubspec.yaml
lua_api/example/: lua_api_example.dart
lua_api/lib/: lua_api.dart
lua_api/scripts/: generate_dart_interfaces.lua
lua_api/test/: lua_api_test.dart
macos/: flutter_lua_bridge.podspec
plans/: c_api_classification.md  flutter_lua_bridge_integration_plan.md  test_plan.md
scripts/: generate_dart_interfaces.lua
src/: CMakeLists.txt  flutter_lua_bridge.c
test/: lua_api_impl_test.dart  lua_constants_test.dart  lua_simple_api_test.dart  lua_state_test.dart  shell.dart  type_convert_helper_test.dart
tool/: ffigen.dart
(+137 files in other folders)
